# bitcoin-negociation-api

./: .gitignore  Dockerfile  README.MD  docker-compose.yml  pyproject.toml
bitcoin-negociation-api/: graph.py  main.py  requirements.txt  start_pipeline_batch.py  start_pipeline_writer.py  start_producer.py
bitcoin-negociation-api/interfaces/: i_consume_api.py  i_producer_api.py  i_spark_batch.py  i_spark_writer.py
bitcoin-negociation-api/notebook/: teste.ipynb
bitcoin-negociation-api/service/: producer_service.py  spark_batch_service.py  spark_writer_service.py
